fix: ballot header alignment

--- a/resources/css/filament/election/theme.css
+++ b/resources/css/filament/election/theme.css
@@ -101,7 +101,7 @@
 }
 
 .fi-header {
-    > div:first-child:last-child {
+    > div:first-child {
         @apply text-center sm:flex-grow;
     }
 }
